<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="@dimen/marge_boutons" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:orientation="vertical"
        android:padding="0dp" >

        <TextView
            android:id="@+id/textViewMessage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical|center_horizontal"
            android:marqueeRepeatLimit="1"
            android:padding="8dp"
            android:singleLine="true"
            android:text="@string/welcome"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewOdometer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical|center_horizontal"
            android:marqueeRepeatLimit="1"
            android:padding="8dp"
            android:singleLine="true"
             android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ffffff"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonDemarrage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marge_boutons"
        android:layout_weight="0.4"
        android:clickable="true"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="OnClicDemarrageArret"
        android:padding="0dp"
        android:soundEffectsEnabled="true"
        android:text="@string/btnstarttrip"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:padding="0dp" >

        <Button
            android:id="@+id/buttonPause"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_margin="@dimen/marge_boutons"
            android:layout_weight="0.5"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="OnClickPause"
            android:padding="0dp"
            android:text="@string/btnpause"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonPlein"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_margin="@dimen/marge_boutons"
            android:layout_weight="0.5"
            android:drawablePadding="0dp"
            android:drawableStart="@drawable/ic_plein_essence_icon"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="OnClickPlein"
            android:padding="0dp"
            android:text="@string/btnFillTank"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="0dp"
        android:layout_weight="0.10"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonPreferences"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_margin="@dimen/marge_boutons"
            android:layout_weight="0.332"
            android:drawableBottom="@drawable/ic_settings"
            android:drawablePadding="0dp"
            android:onClick="OnClickPreferences"
            android:padding="0dp"
            android:text="@string/btnPreferences"
            android:textSize="14sp" />

        <Button
            android:id="@+id/buttonVocal"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_margin="@dimen/marge_boutons"
            android:layout_weight="0.332"
            android:drawableBottom="@drawable/ic_speech"
            android:drawablePadding="0dp"
            android:onClick="OnClickVocal"
            android:padding="0dp"
            android:text="@string/btnVocal"
            android:textSize="14sp" />

        <Button
            android:id="@+id/buttonAudio"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_margin="@dimen/marge_boutons"
            android:layout_weight="0.332"
            android:drawableBottom="@drawable/ic_audio"
            android:drawablePadding="0dp"
            android:onClick="OnClickAudio"
            android:padding="0dp"
            android:text="@string/btnAudio"
            android:textSize="14sp" />

    </LinearLayout>
</LinearLayout>